--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="test">Test</div>
-    <div id="test2">Another test</div>
+    <div id="test2">Another test for 2nd time</div>
 </body>
 </html>
