--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
+
 <body>
-    <div id="test">Test</div>
-    <div id="test2">Another test for 2nd time</div>
-    <div>
-        <div>
-        <div>asd</div>
+    <header>
+        <div id="headerMenu">
+            <h2>Adrian Sabău</h2>
         </div>
-    </div>
+    </header>
+    <main>
+        <div>
+            <h4>Test</h4>
+        </div>
+    </main>
+    <footer>
+        <div>
+            <h3>
+                Contact
+            </h3>
+        </div>
+
+    </footer>
 </body>
+
 </html>
