--- a/index.html
+++ b/index.html
@@ -6,27 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+
 </head>
 
 <body>
-    <header>
-        <div id="headerMenu">
-            <h2>Adrian Sabău</h2>
-        </div>
-    </header>
-    <main>
-        <div>
-            <h4>Test</h4>
-        </div>
-    </main>
-    <footer>
-        <div>
-            <h3>
-                Contact
-            </h3>
-        </div>
+    <div class = "buttons">
+        <a href="http://127.0.0.1:5500/index.html" id="aboutLink">About</a>
+        <a href="http://127.0.0.1:5500/index.html" id="careerLink">Career</a>
+    </div>
+    <div class="middleName"> 
+                ADRIAN SABĂU
+    </div>
 
-    </footer>
+<script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
