--- a/video-background/html/index.html
+++ b/video-background/html/index.html
@@ -3,23 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>adriansabau.eu</title>
+    <title>adriansabau.test</title>
     <link rel="stylesheet" href="../css/style.css">
+    
 </head>
 <body>
 
-    <div id="page">
-        <div id="header-page">
-            <div id="header">
-                <div id="logo">
-                    <div id="name"></div>
-                        <div id="description"></div>
-                            <video id="main-background-video" autoplay loop muted>
-                        </video>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <video onloadeddata="this.play();" playsinline loop id="background-video">
+        <source src="../files/videos/2.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+    </video>
+      
+    <div class="content">
+        <h4>Oh dear Patricia...</h4>
+        <button id="stopButton" onclick="pauseMovie()">Pause</button>
     </div>
 
 <script src="../js/script.js"></script>
